--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Our group trying to find there way throug the D&D 5th edition adventure
   "Hoard of the Dragon Queen".
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+url: "https://endron.github.io/hoard-of-the-dragon-queen/" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
 github_username:  endron
 
