--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,8 @@ script:
 env:
   global:
     - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+branches:
+  only:
+    - gh-pages
+    - /.*/
