--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 2.2
 script:
-  - bundle exec jekyll build
+  - bundle exec jekyll build --baseurl ''
   - bundle exec htmlproof ./_site --only-4xx --check-favicon --check-html
 env:
   global:
