Set correct mail address

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Let's play "Hoard of the Dragon Queen"
-email: your-email@domain.com
+email: tk_rh@gmx.net
 description: > # this means to ignore newlines until "baseurl:"
   Our group trying to find there way throug the D&D 5th edition adventure
   "Hoard of the Dragon Queen".
